--- a/app/index.html
+++ b/app/index.html
@@ -74,9 +74,76 @@
   </header>
 
   <main class="main">
-    
+
     <section class="top">
-      
+      <div class="container top__container">
+        <ul class="top__slider">
+          <li class="top__item">
+            <div class="top__item-inner">
+              <div class="top__item-content">
+                <h2 class="top__title">
+                  New Season <br>
+                  New Brand Collection
+                </h2>
+                <p class="top__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  et dolore magna aliqua. Ipsum.
+                </p>
+                <a class="top__link" href="#">BUY NOW</a>
+              </div>
+              <img class="top__item-img" src="images/slider/1.png" alt="woman">
+            </div>
+          </li>
+          <li class="top__item">
+            <div class="top__item-inner">
+              <div class="top__item-content">
+                <h2 class="top__title">
+                  New Season <br>
+                  New Brand Collection
+                </h2>
+                <p class="top__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  et dolore magna aliqua. Ipsum.
+                </p>
+                <a class="top__link" href="#">BUY NOW</a>
+              </div>
+              <img class="top__item-img" src="images/slider/1.png" alt="woman">
+            </div>
+          </li>
+          <li class="top__item">
+            <div class="top__item-inner">
+              <div class="top__item-content">
+                <h2 class="top__title">
+                  New Season <br>
+                  New Brand Collection
+                </h2>
+                <p class="top__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  et dolore magna aliqua. Ipsum.
+                </p>
+                <a class="top__link" href="#">BUY NOW</a>
+              </div>
+              <img class="top__item-img" src="images/slider/1.png" alt="woman">
+            </div>
+          </li>
+          <li class="top__item">
+            <div class="top__item-inner">
+              <div class="top__item-content">
+                <h2 class="top__title">
+                  New Season <br>
+                  New Brand Collection
+                </h2>
+                <p class="top__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  et dolore magna aliqua. Ipsum.
+                </p>
+                <a class="top__link" href="#">BUY NOW</a>
+              </div>
+              <img class="top__item-img" src="images/slider/1.png" alt="woman">
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
 
   </main>
@@ -112,8 +179,8 @@
             </li>
             <li class="social__item">
               <a class="social__link" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16px" height="16px"
-                  viewBox="0 0 16 16" version="1.1">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16px"
+                  height="16px" viewBox="0 0 16 16" version="1.1">
                   <g id="surface1">
                     <path
                       d="M 14.355469 4.742188 C 14.367188 4.882812 14.367188 5.023438 14.367188 5.164062 C 14.367188 9.5 11.066406 14.496094 5.035156 14.496094 C 3.175781 14.496094 1.449219 13.960938 0 13.023438 C 0.261719 13.054688 0.519531 13.066406 0.789062 13.066406 C 2.324219 13.066406 3.734375 12.546875 4.863281 11.664062 C 3.421875 11.632812 2.210938 10.691406 1.796875 9.390625 C 2 9.421875 2.203125 9.441406 2.414062 9.441406 C 2.710938 9.441406 3.003906 9.398438 3.277344 9.328125 C 1.773438 9.023438 0.648438 7.703125 0.648438 6.109375 L 0.648438 6.070312 C 1.085938 6.3125 1.59375 6.464844 2.132812 6.484375 C 1.246094 5.898438 0.667969 4.890625 0.667969 3.753906 C 0.667969 3.144531 0.832031 2.585938 1.117188 2.097656 C 2.730469 4.085938 5.15625 5.386719 7.878906 5.527344 C 7.828125 5.285156 7.796875 5.03125 7.796875 4.777344 C 7.796875 2.972656 9.257812 1.5 11.074219 1.5 C 12.019531 1.5 12.871094 1.898438 13.472656 2.535156 C 14.210938 2.394531 14.925781 2.117188 15.554688 1.742188 C 15.308594 2.507812 14.789062 3.144531 14.113281 3.550781 C 14.773438 3.476562 15.414062 3.296875 16 3.042969 C 15.554688 3.695312 14.992188 4.273438 14.355469 4.742188 Z M 14.355469 4.742188 " />
@@ -123,8 +190,8 @@
             </li>
             <li class="social__item">
               <a class="social__link" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16px" height="18px"
-                  viewBox="0 0 16 18" version="1.1">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16px"
+                  height="18px" viewBox="0 0 16 18" version="1.1">
                   <g id="surface1">
                     <path
                       d="M 3.582031 15.75 L 0.265625 15.75 L 0.265625 5.234375 L 3.582031 5.234375 Z M 1.921875 3.800781 C 0.859375 3.800781 0 2.9375 0 1.890625 C 0 0.847656 0.859375 0 1.921875 0 C 2.984375 0 3.84375 0.847656 3.84375 1.890625 C 3.84375 2.9375 2.980469 3.800781 1.921875 3.800781 Z M 15.996094 15.75 L 12.6875 15.75 L 12.6875 10.632812 C 12.6875 9.410156 12.660156 7.847656 10.960938 7.847656 C 9.234375 7.847656 8.972656 9.171875 8.972656 10.542969 L 8.972656 15.75 L 5.65625 15.75 L 5.65625 5.234375 L 8.839844 5.234375 L 8.839844 6.667969 L 8.886719 6.667969 C 9.328125 5.84375 10.410156 4.972656 12.023438 4.972656 C 15.382812 4.972656 16 7.148438 16 9.972656 L 16 15.75 Z M 15.996094 15.75 " />
@@ -134,8 +201,8 @@
             </li>
             <li class="social__item">
               <a class="social__link" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="15px" height="16px"
-                  viewBox="0 0 15 16" version="1.1">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="15px"
+                  height="16px" viewBox="0 0 15 16" version="1.1">
                   <g id="surface1">
                     <path
                       d="M 15.25 8.179688 C 15.25 12.601562 12.222656 15.75 7.75 15.75 C 3.460938 15.75 0 12.289062 0 8 C 0 3.710938 3.460938 0.25 7.75 0.25 C 9.835938 0.25 11.59375 1.015625 12.945312 2.277344 L 10.835938 4.304688 C 8.078125 1.644531 2.945312 3.644531 2.945312 8 C 2.945312 10.703125 5.105469 12.894531 7.75 12.894531 C 10.820312 12.894531 11.96875 10.695312 12.148438 9.554688 L 7.75 9.554688 L 7.75 6.886719 L 15.128906 6.886719 C 15.199219 7.285156 15.25 7.664062 15.25 8.179688 Z M 15.25 8.179688 " />
@@ -145,8 +212,8 @@
             </li>
             <li class="social__item">
               <a class="social__link" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="13px" height="17px"
-                  viewBox="0 0 13 17" version="1.1">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="13px"
+                  height="17px" viewBox="0 0 13 17" version="1.1">
                   <g id="surface1">
                     <path
                       d="M 6.90625 0.214844 C 3.433594 0.214844 0 2.488281 0 6.164062 C 0 8.5 1.339844 9.828125 2.152344 9.828125 C 2.488281 9.828125 2.679688 8.910156 2.679688 8.652344 C 2.679688 8.34375 1.878906 7.6875 1.878906 6.402344 C 1.878906 3.730469 3.949219 1.839844 6.632812 1.839844 C 8.9375 1.839844 10.644531 3.125 10.644531 5.484375 C 10.644531 7.25 9.921875 10.554688 7.585938 10.554688 C 6.742188 10.554688 6.023438 9.957031 6.023438 9.101562 C 6.023438 7.847656 6.917969 6.628906 6.917969 5.335938 C 6.917969 3.136719 3.738281 3.535156 3.738281 6.191406 C 3.738281 6.75 3.808594 7.367188 4.0625 7.875 C 3.59375 9.847656 2.640625 12.785156 2.640625 14.820312 C 2.640625 15.445312 2.730469 16.0625 2.792969 16.691406 C 2.90625 16.816406 2.851562 16.804688 3.027344 16.742188 C 4.734375 14.449219 4.671875 14 5.445312 11.003906 C 5.859375 11.78125 6.9375 12.199219 7.789062 12.199219 C 11.386719 12.199219 13 8.761719 13 5.664062 C 13 2.367188 10.09375 0.214844 6.90625 0.214844 Z M 6.90625 0.214844 " />
@@ -211,7 +278,7 @@
           </p>
           <form class="footer__form">
             <input class="footer__input" type="email" placeholder="Your email address" required>
-            <button class="footer__btn" type="submit">
+            <button class="footer__btn btn" type="submit">
               Subscribe
             </button>
           </form>
